<resources>
    <string name="app_name">Mobile Hotel Management System</string>
    <string name="logo_desc">logo_desc</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="string_password">password</string>
    <string name="Password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Sign In</string>
    <string name="hello_string">Hello,</string>
    <string name="check_in_and_check_out_string">Check-in and Check-out</string>
    <string name="room_service_string">Room Service</string>
    <string name="facilities_monitoring_string">Facilities Monitoring</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="indoor_swimming_pool">Indoor Swimming Pool</string>
    <string name="facilities_list">Facilities List</string>
    <string name="karaoke_room">Karaoke Room</string>
    <string name="massage_room">Massage Room</string>
    <string name="username_string">Username</string>
    <string name="password_string">Password</string>
    <string name="check_in_check_out"><![CDATA[Check In & Check Out]]></string>
    <string name="back">back page</string>
    <string name="search">search</string>
    <string name="editSearch">Search</string>
    <string name="add_new_customer">Add New Customer</string>
    <string name="add_room_no">Room No.: </string>
    <string name="edit_add_room_no">101</string>
    <string name="add_customer_name">Name:</string>
    <string name="edit_add_name">Name</string>
    <string name="add_email">Email:</string>
    <string name="edit_add_email">Noname@gmail.com</string>
    <string name="add_phone">Phone:</string>
    <string name="edit_add_phone">098-7654321</string>
    <string name="add_checkIn">Check In:</string>
    <string name="edit_add_checkIn">25/1/2021</string>
    <string name="add_checkOut">Check Out:</string>
    <string name="edit_add_checkOut">1/2/2021</string>
    <string name="add_customer">Add</string>
    <string name="cancel_add_customer">Cancel</string>
    <string name="edit_customer_list">Edit Customer List</string>
    <string name="edit_room_no">Room No.: </string>
    <string name="edit_edit_room_no">101</string>
    <string name="edit_customer_name">Name:</string>
    <string name="edit_edit_name">Name</string>
    <string name="edit_email">Email:</string>
    <string name="edit_edit_email">Noname@gmail.com</string>
    <string name="edit_phone">Phone:</string>
    <string name="edit_edit_phone">098-7654321</string>
    <string name="edit_checkIn">Check In:</string>
    <string name="edit_edit_checkIn">25/1/2021</string>
    <string name="edit_checkOut">Check Out:</string>
    <string name="edit_edit_checkOut">1/2/2021</string>
    <string name="edit_customer">Confirm</string>
    <string name="cancel_edit_customer">Cancel</string>
    <string name="indoor_swimming_pool_list"><![CDATA[Indoor Swimming Pool]]></string>
    <string name="pool_back">back page</string>
    <string name="pool_search">search</string>
    <string name="pool_editSearch">Search</string>
    <string name="add_new_pool_reservation">Add New Pool Reservation</string>
    <string name="add_pool_reservation_room_no">Room no.:</string>
    <string name="edit_add_pool_reservation_room">101</string>
    <string name="add_pool_reservation_phone">Phone no.:</string>
    <string name="edit_add_pool_reservation_phone">098-7654321</string>
    <string name="add_pool_reservation_time">Time:</string>
    <string name="edit_add_pool_reservation_time">3.00pm ~ 5.00pm</string>
    <string name="add_pool_reservation_button">Add</string>
    <string name="cancel_add_pool_reservation_button">Cancel</string>
    <string name="edit_pool_list">Edit Pool List</string>
    <string name="edit_pool_list_room">Room no.:</string>
    <string name="edit_edit_pool_list_room">101</string>
    <string name="edit_pool_list_phone">Phone no.:</string>
    <string name="edit_edit_pool_list_phone">098-7654321</string>
    <string name="edit_pool_list_time">Time:</string>
    <string name="edit_edit_pool_list_time">3.00pm ~ 5.00pm</string>
    <string name="edit_pool_list_button">Confirm</string>
    <string name="cancel_edit_pool_list_button">Cancel</string>
    <string name="karaoke_room_list"><![CDATA[Karaoke Room]]></string>
    <string name="karaoke_back">back page</string>
    <string name="karaoke_search">search</string>
    <string name="karaoke_editSearch">Search</string>
    <string name="add_new_karaoke_reservation">Add New Karaoke Reservation</string>
    <string name="add_karaoke_reservation_room_no">Room no.:</string>
    <string name="edit_add_karaoke_reservation_room">101</string>
    <string name="add_karaoke_reservation_phone">Phone no.:</string>
    <string name="edit_add_karaoke_reservation_phone">098-7654321</string>
    <string name="add_karaoke_reservation_time">Time:</string>
    <string name="edit_add_karaoke_reservation_time">3.00pm ~ 5.00pm</string>
    <string name="add_karaoke_reservation_button">Add</string>
    <string name="cancel_add_karaoke_reservation_button">Cancel</string>
    <string name="edit_karaoke_list">Edit Karaoke List</string>
    <string name="edit_karaoke_list_room">Room no.:</string>
    <string name="edit_edit_karaoke_list_room">101</string>
    <string name="edit_karaoke_list_phone">Phone no.:</string>
    <string name="edit_edit_karaoke_list_phone">098-7654321</string>
    <string name="edit_karaoke_list_time">Time:</string>
    <string name="edit_edit_karaoke_list_time">3.00pm ~ 5.00pm</string>
    <string name="edit_karaoke_list_button">Confirm</string>
    <string name="cancel_edit_karaoke_list_button">Cancel</string>
    <string name="massage_room_list"><![CDATA[Massage Room]]></string>
    <string name="massage_back">back page</string>
    <string name="massage_search">search</string>
    <string name="massage_editSearch">Search</string>
    <string name="add_new_massage_reservation">Add New Massage Reservation</string>
    <string name="add_massage_reservation_room_no">Room no.:</string>
    <string name="edit_add_massage_reservation_room">101</string>
    <string name="add_massage_reservation_phone">Phone no.:</string>
    <string name="edit_add_massage_reservation_phone">098-7654321</string>
    <string name="add_massage_reservation_time">Time:</string>
    <string name="edit_add_massage_reservation_time">3.00pm ~ 5.00pm</string>
    <string name="add_massage_reservation_button">Add</string>
    <string name="cancel_add_massage_reservation_button">Cancel</string>
    <string name="edit_massage_list">Edit Massage List</string>
    <string name="edit_massage_list_room">Room no.:</string>
    <string name="edit_edit_massage_list_room">101</string>
    <string name="edit_massage_list_phone">Phone no.:</string>
    <string name="edit_edit_massage_list_phone">098-7654321</string>
    <string name="edit_massage_list_time">Time:</string>
    <string name="edit_edit_massage_list_time">3.00pm ~ 5.00pm</string>
    <string name="edit_massage_list_button">Confirm</string>
    <string name="cancel_edit_massage_list_button">Cancel</string>
    <string name="add_check_button">add_check_button</string>
    <string name="room_desc_100">1 bedroom, 1 bathroom</string>
    <string name="room_no_100">100</string>
    <string name="price_100">120</string>
    <string name="room_no_101">101</string>
    <string name="room_desc_101">1 bedroom, 1 bathroom, 1 living room</string>
    <string name="price_101">130</string>
    <string name="room_no_102">102</string>
    <string name="room_desc_102">2 bedroom, 1 bathroom, 1 living room</string>
    <string name="price_102">140</string>
    <string name="room_no_103">103</string>
    <string name="room_desc_103">2 bedroom, 2 bathroom, 1 living room</string>
    <string name="price_103">150</string>
    <string name="room_no_104">104</string>
    <string name="room_desc_104">3 bedroom, 2 bathroom, 1 living room</string>
    <string name="price_104">160</string>
    <string name="room_no_105">105</string>
    <string name="room_desc_105">3 bedroom, 3 bathroom, 1 living room</string>
    <string name="price_105">160</string>
    <string name="room_no_106">106</string>
    <string name="price_106">170</string>
    <string name="room_desc_106">4 bedroom, 2 bathroom, 1 living room</string>
    <string name="room_no_107">107</string>
    <string name="room_desc_107">4 bedroom, 3 bathroom, 1 living room</string>
    <string name="price_107">180</string>
    <string name="customer_check_in">22/01/2020</string>
    <string name="customer_check_out">24/01/2020</string>
    <string name="select_service_text">Select a service.</string>
    <string name="select_food_service">Food Ordering Services</string>
    <string name="select_cleaning_service">Room Cleaning Services</string>
    <string name="select_service_warning">Please note that you will need to have a room booked to access the service.*</string>
    <string name="title_activity_food_service">activity_food_service</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="visa_card">Visa Card</string>
    <string name="master_card">Master Card</string>
    <string name="select_cleaning_service_title">"Select Cleaning Service "</string>
    <string name="clean_service_name_1">Quick Cleaning</string>
    <string name="clean_price_name_1">Price: RM 10</string>
    <string name="clean_service_time_1">Serving Time: 10am ~ 5pm</string>
    <string name="clean_service_availability_1">Availability: Available</string>
    <string name="clean_service_btn">Order</string>
    <string name="advanced_cleaning">Advanced Cleaning</string>
    <string name="price_rm_20">Price: RM 20</string>
    <string name="clean_service_time_2">Serving Time: 10am ~ 5pm</string>
    <string name="clean_service_availability_2">Availability: Available</string>
    <string name="deep_cleaning">Deep Cleaning</string>
    <string name="price_rm_35">Price: RM 35</string>
    <string name="clean_service_time_3">Serving Time: 10am ~ 5pm</string>
    <string name="clean_service_availability_3">Availability: Available</string>
    <string name="room_prompt_text">Please select a room to continue your order</string>
    <string name="rooom_text">Room:</string>
    <string name="confrim_order_btn">Confirm Order</string>
    <string name="room_no_hint_text">Room No</string>
    <string name="price">Price:</string>
    <string name="serving_time">Serving time:</string>
    <string name="description">Description:</string>
    <string name="select_food_service_title">Select Food Service</string>
    <string name="food_service_name_1">American Breakfast</string>
    <string name="food_service_price_1">Price: RM 10</string>
    <string name="food_service_time_1">Serving time: 7am ~ 11am</string>
    <string name="food_service_availability_1">Availability: Available</string>
    <string name="food_service_order_btn">Order</string>
    <string name="food_service_name_2">Farmers Salad</string>
    <string name="food_service_price_2">Price: RM 8</string>
    <string name="food_service_time_2">Serving Time: 1am ~ 8pm</string>
    <string name="food_service_availability_2">Availability: Available</string>
    <string name="food_service_name_3">Specialty Tea</string>
    <string name="food_service_price_3">Price: RM 5</string>
    <string name="food_service_time_3">Serving time: 1pm ~ 8pm</string>
    <string name="food_service_availability_3">Availability: Available</string>
    <string name="food_service_name_4">Kids Meal</string>
    <string name="food_service_price_4">Price: RM 18</string>
</resources>