<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewCustomer">

    <TextView
        android:id="@+id/add_customer_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="50dp"
        android:text="@string/add_new_customer"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_customer_back_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/add_customer_back_logo"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow" />

    <View
        android:id="@+id/add_customer_background"
        android:layout_width="382dp"
        android:layout_height="652dp"
        android:layout_marginTop="10dp"
        android:background="#D5D2D2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_customer_textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/add_room_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/add_room_no"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/add_customer_background"
        app:layout_constraintTop_toTopOf="@+id/add_customer_background" />

    <TextView
        android:id="@+id/add_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/add_customer_name"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/add_customer_background"
        app:layout_constraintTop_toBottomOf="@+id/add_room_textView" />

    <TextView
        android:id="@+id/add_email_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/add_email"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/add_customer_background"
        app:layout_constraintTop_toBottomOf="@+id/add_name_textView" />

    <TextView
        android:id="@+id/add_phone_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/add_phone"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/add_customer_background"
        app:layout_constraintTop_toBottomOf="@+id/add_email_textView" />

    <TextView
        android:id="@+id/add_checkIn_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/add_checkIn"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/add_customer_background"
        app:layout_constraintTop_toBottomOf="@+id/add_phone_textView" />

    <TextView
        android:id="@+id/add_checkOut_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/add_checkOut"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/add_customer_background"
        app:layout_constraintTop_toBottomOf="@+id/add_checkIn_textView" />

    <EditText
        android:id="@+id/add_room"
        android:layout_width="217dp"
        android:layout_height="36dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        android:background="#FFFCFC"
        android:ems="3"
        android:hint="@string/edit_add_room_no"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/add_room_textView"
        app:layout_constraintTop_toTopOf="@+id/add_customer_background" />

    <EditText
        android:id="@+id/add_name"
        android:layout_width="257dp"
        android:layout_height="39dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="33dp"
        android:background="#FFFCFC"
        android:ems="10"
        android:hint="@string/edit_add_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/add_name_textView"
        app:layout_constraintTop_toBottomOf="@+id/add_room" />

    <EditText
        android:id="@+id/add_email"
        android:layout_width="257dp"
        android:layout_height="39dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="33dp"
        android:background="#FFFCFC"
        android:ems="10"
        android:hint="@string/edit_add_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/add_email_textView"
        app:layout_constraintTop_toBottomOf="@+id/add_name" />

    <EditText
        android:id="@+id/add_checkIn"
        android:layout_width="229dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="33dp"
        android:background="#FFFCFC"
        android:ems="10"
        android:hint="@string/edit_add_checkIn"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/add_checkIn_textView"
        app:layout_constraintTop_toBottomOf="@+id/add_phone2" />

    <EditText
        android:id="@+id/add_checkOut"
        android:layout_width="216dp"
        android:layout_height="39dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="33dp"
        android:background="#FFFCFC"
        android:ems="10"
        android:hint="@string/edit_add_checkOut"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/add_checkOut_textView"
        app:layout_constraintTop_toBottomOf="@+id/add_checkIn" />

    <EditText
        android:id="@+id/add_phone2"
        android:layout_width="254dp"
        android:layout_height="41dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="33dp"
        android:background="#FFFCFC"
        android:ems="10"
        android:hint="@string/edit_add_phone"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/add_phone_textView"
        app:layout_constraintTop_toBottomOf="@+id/add_email" />

    <Button
        android:id="@+id/add_customer_button"
        android:layout_width="140dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:text="@string/add_customer"
        android:textSize="18sp"
        app:backgroundTint="#1A3CFB"
        app:layout_constraintEnd_toEndOf="@+id/add_customer_background"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/add_customer_background"
        app:layout_constraintTop_toBottomOf="@+id/add_checkOut" />

    <Button
        android:id="@+id/cancel_add_customer_button"
        android:layout_width="140dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:text="@string/cancel_add_customer"
        android:textSize="18sp"
        app:backgroundTint="#F44336"
        app:layout_constraintEnd_toEndOf="@+id/add_customer_background"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/add_customer_background"
        app:layout_constraintTop_toBottomOf="@+id/add_customer_button" />

</androidx.constraintlayout.widget.ConstraintLayout>