<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCustomerList">

    <Button
        android:id="@+id/edit_customer_button"
        android:layout_width="140dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:text="@string/edit_customer"
        android:textSize="18sp"
        app:backgroundTint="#1A3CFB"
        app:layout_constraintEnd_toEndOf="@+id/edit_customer_background"
        app:layout_constraintStart_toStartOf="@+id/edit_customer_background"
        app:layout_constraintTop_toBottomOf="@+id/edit_checkOut" />

    <View
        android:id="@+id/edit_customer_background"
        android:layout_width="382dp"
        android:layout_height="652dp"
        android:layout_marginTop="10dp"
        android:background="#D5D2D2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_customer_textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cancel_edit_customer_button"
        android:layout_width="140dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:text="@string/cancel_edit_customer"
        android:textSize="18sp"
        app:backgroundTint="#F44336"
        app:layout_constraintEnd_toEndOf="@+id/edit_customer_background"
        app:layout_constraintStart_toStartOf="@+id/edit_customer_background"
        app:layout_constraintTop_toBottomOf="@+id/edit_customer_button" />

    <TextView
        android:id="@+id/edit_email_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/edit_email"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/edit_customer_background"
        app:layout_constraintTop_toBottomOf="@+id/edit_name_textView" />

    <TextView
        android:id="@+id/edit_phone_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/edit_phone"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/edit_customer_background"
        app:layout_constraintTop_toBottomOf="@+id/edit_email_textView" />

    <TextView
        android:id="@+id/edit_checkIn_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/edit_checkIn"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/edit_customer_background"
        app:layout_constraintTop_toBottomOf="@+id/edit_phone_textView" />

    <TextView
        android:id="@+id/edit_checkOut_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/edit_checkOut"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/edit_customer_background"
        app:layout_constraintTop_toBottomOf="@+id/edit_checkIn_textView" />

    <TextView
        android:id="@+id/edit_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/edit_customer_name"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/edit_customer_background"
        app:layout_constraintTop_toBottomOf="@+id/edit_room_textView" />

    <TextView
        android:id="@+id/edit_room_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/edit_room_no"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/edit_customer_background"
        app:layout_constraintTop_toTopOf="@+id/edit_customer_background" />

    <EditText
        android:id="@+id/edit_room"
        android:layout_width="217dp"
        android:layout_height="36dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        android:background="#FFFCFC"
        android:ems="3"
        android:hint="@string/edit_edit_room_no"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/edit_room_textView"
        app:layout_constraintTop_toTopOf="@+id/edit_customer_background" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="261dp"
        android:layout_height="36dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="33dp"
        android:background="#FFFCFC"
        android:ems="3"
        android:hint="@string/edit_edit_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/edit_name_textView"
        app:layout_constraintTop_toBottomOf="@+id/edit_room" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="261dp"
        android:layout_height="36dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="34dp"
        android:background="#FFFCFC"
        android:ems="3"
        android:hint="@string/edit_edit_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/edit_email_textView"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="258dp"
        android:layout_height="38dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="34dp"
        android:background="#FFFCFC"
        android:ems="3"
        android:hint="@string/edit_edit_phone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/edit_phone_textView"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <EditText
        android:id="@+id/edit_checkIn"
        android:layout_width="226dp"
        android:layout_height="39dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="34dp"
        android:background="#FFFCFC"
        android:ems="3"
        android:hint="@string/edit_edit_checkIn"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/edit_checkIn_textView"
        app:layout_constraintTop_toBottomOf="@+id/edit_phone" />

    <EditText
        android:id="@+id/edit_checkOut"
        android:layout_width="217dp"
        android:layout_height="42dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="34dp"
        android:background="#FFFCFC"
        android:ems="3"
        android:hint="@string/edit_edit_checkOut"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/edit_checkOut_textView"
        app:layout_constraintTop_toBottomOf="@+id/edit_checkIn" />

    <TextView
        android:id="@+id/edit_customer_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:text="@string/edit_customer_list"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toEndOf="@+id/edit_customer_back_logo3"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/edit_customer_back_logo3"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>