<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="LabelFor" >

    <ImageView
        android:id="@+id/hotel_logo"
        android:layout_width="384dp"
        android:layout_height="83dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/logo_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hotel_logo" />

    <EditText
        android:id="@+id/sign_in_username"
        android:layout_width="309dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:autofillHints="Username"
        android:background="#E4E4E4"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/username"
        android:textColor="#A19E9E"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hotel_logo" />

    <EditText
        android:id="@+id/password"
        android:layout_width="309dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:autofillHints="Password"
        android:background="#EFEAEA"
        android:ems="10"
        android:inputType="textVisiblePassword"
        android:text="@string/Password"
        android:textColor="#A19E9E"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_username" />

    <CheckBox
        android:id="@+id/remember_password"
        android:layout_width="272dp"
        android:layout_height="68dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:text="@string/remember_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/button4"
        android:layout_width="278dp"
        android:layout_height="63dp"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        app:backgroundTint="#2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remember_password" />

</androidx.constraintlayout.widget.ConstraintLayout>